Fix scrollbars?

--- a/MaterialSkin/HTML/material/html/css/dark.css
+++ b/MaterialSkin/HTML/material/html/css/dark.css
@@ -5,6 +5,18 @@
  * MIT license.
  */
 
+::-webkit-scrollbar {
+    background: #3d3d3d;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #777;
+}
+
+::-webkit-scrollbar-corner {
+    background: #333;
+}
+
 .browse-text a, .np-info-text a, .np-info-text-full a,
 .primary--text, a.primary--text, div.primary--text, i.primary--text, label.primary--text {
     color: #99ceff !important;
